--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,7 @@
         <a href="https://sv.wikipedia.org/wiki/Tjeckien">Czech Republic</a>
 
         <!-- LINK TO LOGIN PAGE--->
+        <p><a href="login.html">login</a></p>
 
 
     </nav>
@@ -45,6 +46,10 @@
         </h2>
         <p>Future World</p>
 
+        <br/>
+
+        <br/>
+
         <article>
             <h4>The Prime Minister of Hungary is named Viktor Orban, he's born in 1963</h4>
             <p>Fidesz party leader</p>
@@ -69,14 +74,16 @@
         <ul>
             <li>
                 <h4>Poland</h4>
+                <img src="poland1.png" width="200px">
                 <ol>
-                    <li><p>Warszawa</p></li>
+                    <li><p>Warsaw</p></li>
                     <li><p>Krakow</p></li>
                     <li><p>Lodz</p></li>
                 </ol>
             </li>
             <li>
                 <h4>Hungary</h4>
+                <img src="hungary1.png" width="200px">
                 <ol>
                     <li><p>Budapest</p></li>
                     <li><p>Debrecen</p></li>
@@ -85,8 +92,9 @@
             </li>
             <li>
                 <h4>Czech Republic</h4>
+                <img src="czech-republic1.png" width="200px">
                 <ol>
-                    <li><p>Prag</p></li>
+                    <li><p>Prague</p></li>
                     <li><p>Brno</p></li>
                     <li><p>Ostrava</p></li>
                 </ol>
