--- a/Login.html
+++ b/Login.html
@@ -6,6 +6,20 @@
 </head>
 <body>
 <header>
+    <h1>Login Page</h1>
+    <nav>
+        <!-- LINK TO INDEX PAGE--->
+        <p><a href="index.html">index</a></p>
+        <ul>
+            <li>
+                <h4>Capital Cities</h4>
+                <ul><a href="https://en.wikipedia.org/wiki/Warsaw">Warsaw</a></ul>
+                <ul><a href="https://en.wikipedia.org/wiki/Budapest">Budapest</a></ul>
+                <ul><a href="https://en.wikipedia.org/wiki/Prague">Prague</a></ul>
+
+            </li>
+        </ul>
+    </nav>
     <!--  Header element that is containing the following    --->
     <!--  Headline element of biggest size with the page name or a logo image    --->
     <!--  Navigation element containing following    --->
@@ -26,37 +40,30 @@
     <!--  Form element    --->
     <!--  Form element    --->
 
-    <div class="login-container">
+    <div>
+        <h1>Login</h1>
         <form>
-            <h1>Register</h1>
             <p>Please fill in this form to create an account.</p>
             <hr/>
 
-            <label>First Name:</label>
-            <input type="text" placeholder="Enter First Name" name="firstName"/>
+            <label>Username:</label>
+            <input type="text" placeholder="Username" name="username"/>
 
-            <label>Last Name:</label>
-            <input type="text" placeholder="Enter Last Name" name="lastName"/>
-
-            <label>Email:</label>
-            <input type="text" placeholder="Enter Email" name="email"/>
-
-            <label>Course:</label>
-            <select>
-                <option value="java">Java</option>
-                <option value="c#">C#</option>
-                <option value="python">Python</option>
-            </select>
-
+            <label>Password Name:</label>
+            <input type="text" placeholder="password" name="password"/>
+            <button type="submit" class="reset-btn">Reset</button>
             <hr/>
-            <button type="submit" class="register-btn">Register</button>
+            <button type="submit" class="login-btn">Sign In</button>
+
         </form>
     </div>
 
 
 </header>
 <footer>
-    Copyright &copy; 2021 OlvProduction
+    <span>
+        Copyright &copy; 2021 OlvProduction
+    </span>
 </footer>
 </body>
 </html>
