--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>European Countries</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -58,7 +59,7 @@
         <article>
             <h4>The Colors included in the Flag of Poland are red and white</h4>
             <p>Poland is divided into 16 voivodships</p>
-            <img src="Poland2.jpg" width="300px">
+            <img src="images/Poland2.jpg" width="300px">
             <p>Polski jest łatwy, jeśli możesz</p>
         </article>
     </div>
@@ -74,7 +75,7 @@
         <ul>
             <li>
                 <h4>Poland</h4>
-                <img src="poland1.png" width="200px">
+                <img src="images/poland1.png" width="200px">
                 <ol>
                     <li><p>Warsaw</p></li>
                     <li><p>Krakow</p></li>
@@ -83,7 +84,7 @@
             </li>
             <li>
                 <h4>Hungary</h4>
-                <img src="hungary1.png" width="200px">
+                <img src="images/hungary1.png" width="200px">
                 <ol>
                     <li><p>Budapest</p></li>
                     <li><p>Debrecen</p></li>
@@ -92,7 +93,7 @@
             </li>
             <li>
                 <h4>Czech Republic</h4>
-                <img src="czech-republic1.png" width="200px">
+                <img src="images/czech-republic1.png" width="200px">
                 <ol>
                     <li><p>Prague</p></li>
                     <li><p>Brno</p></li>
