--- a/Login.html
+++ b/Login.html
@@ -47,13 +47,14 @@
             <hr/>
 
             <label>Username:</label>
-            <input type="text" placeholder="Username" name="username"/>
+            <input type="text"  name="username"/>
 
-            <label>Password Name:</label>
-            <input type="text" placeholder="password" name="password"/>
+            <label>Password:</label>
+            <input type="password"  name="password"/>
             <button type="submit" class="reset-btn">Reset</button>
-            <hr/>
             <button type="submit" class="login-btn">Sign In</button>
+            <hr/>
+
 
         </form>
     </div>
