Finished with part 2 - CSS

--- a/Index.html
+++ b/Index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>European Countries</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
-<body>
+<body class="body">
 <header>
-    <h1>Tourist Portal</h1>
+    <h1 class="pageName">Tourist Portal</h1>
 
     <nav>
 
-        <a href="https://sv.wikipedia.org/wiki/Polen">Poland</a>
-        <a href="https://sv.wikipedia.org/wiki/Ungern">Hungary</a>
-        <a href="https://sv.wikipedia.org/wiki/Tjeckien">Czech Republic</a>
+        <a class="first" href="https://sv.wikipedia.org/wiki/Polen">Poland</a>
+        <a class="second" href="https://sv.wikipedia.org/wiki/Ungern">Hungary</a>
+        <a class="third" href="https://sv.wikipedia.org/wiki/Tjeckien">Czech Republic</a>
 
         <!-- LINK TO LOGIN PAGE--->
-        <p><a href="login.html">login</a></p>
+        <p><a class="login" href="login.html">login</a></p>
 
 
     </nav>
@@ -40,26 +40,26 @@
     <!--  A footer element that is containing the following  --->
     <!--  Span element with html code for a copyright glyph and your name  --->
 
-    <div>
+    <div class="section">
 
-        <h2>
+        <h2 class="mainHeader">
             Three lovely little Countries
         </h2>
-        <p>Future World</p>
+        <p class="text">Future World</p>
 
         <br/>
 
         <br/>
 
-        <article>
+        <article class="Article1">
             <h4>The Prime Minister of Hungary is named Viktor Orban, he's born in 1963</h4>
             <p>Fidesz party leader</p>
             <p>Lawyer</p>
         </article>
-        <article>
+        <article class="Article2">
             <h4>The Colors included in the Flag of Poland are red and white</h4>
             <p>Poland is divided into 16 voivodships</p>
-            <img src="images/Poland2.jpg" width="300px">
+            <img  class="photo" src="images/Poland2.jpg" width="300px">
             <p>Polski jest łatwy, jeśli możesz</p>
         </article>
     </div>
@@ -68,14 +68,14 @@
 
 
 
-    <aside>
-        <h4>
+    <aside class="aside">
+        <h4 class="sideContent">
             The largest cities
         </h4>
         <ul>
             <li>
                 <h4>Poland</h4>
-                <img src="images/poland1.png" width="200px">
+                <img src="images/poland1.png" width="40px">
                 <ol>
                     <li><p>Warsaw</p></li>
                     <li><p>Krakow</p></li>
@@ -84,7 +84,7 @@
             </li>
             <li>
                 <h4>Hungary</h4>
-                <img src="images/hungary1.png" width="200px">
+                <img src="images/hungary1.png" width="40px">
                 <ol>
                     <li><p>Budapest</p></li>
                     <li><p>Debrecen</p></li>
@@ -93,7 +93,7 @@
             </li>
             <li>
                 <h4>Czech Republic</h4>
-                <img src="images/czech-republic1.png" width="200px">
+                <img src="images/czech-republic1.png" width="40px">
                 <ol>
                     <li><p>Prague</p></li>
                     <li><p>Brno</p></li>
@@ -108,7 +108,7 @@
 
 </header>
 
-<footer>
+<footer class="footer">
     <span>
         Copyright &copy; 2021 OlvProduction
     </span>
