--- a/Login.html
+++ b/Login.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-<header>
-    <h1>Login Page</h1>
-    <nav>
+<header class="backgroundLogin">
+    <h1 class="loginPageName">Login Page</h1>
+    <nav class="section">
         <!-- LINK TO INDEX PAGE--->
-        <p><a href="index.html">index</a></p>
+        <p><a class="index" href="index.html">index</a></p>
         <ul>
             <li>
-                <h4>Capital Cities</h4>
-                <ul><a href="https://en.wikipedia.org/wiki/Warsaw">Warsaw</a></ul>
-                <ul><a href="https://en.wikipedia.org/wiki/Budapest">Budapest</a></ul>
-                <ul><a href="https://en.wikipedia.org/wiki/Prague">Prague</a></ul>
+                <h4 class="ccLogin">Capital Cities</h4>
+                <ul><a class="firstLogin" href="https://en.wikipedia.org/wiki/Warsaw">Warsaw</a></ul>
+                <ul><a class="secondLogin" href="https://en.wikipedia.org/wiki/Budapest">Budapest</a></ul>
+                <ul><a class="thirdLogin" href="https://en.wikipedia.org/wiki/Prague">Prague</a></ul>
 
             </li>
         </ul>
@@ -40,9 +41,9 @@
     <!--  Form element    --->
     <!--  Form element    --->
 
-    <div>
-        <h1>Login</h1>
-        <form>
+    <div class="bgc">
+        <h1 class="loginName"></h1>
+        <form class="loginMain">
             <p>Please fill in this form to create an account.</p>
             <hr/>
 
@@ -62,7 +63,7 @@
 
 </header>
 <footer>
-    <span>
+    <span class="footerLogin">
         Copyright &copy; 2021 OlvProduction
     </span>
 </footer>
